Fix z-index button add

--- a/src/app/shared/layout/top-bar/top-bar.component.scss
+++ b/src/app/shared/layout/top-bar/top-bar.component.scss
@@ -7,6 +7,7 @@
     padding-bottom: 15px;
     background-color: #333;
     color: #fff;
+    z-index: 2;
 
     & .top-bar__logo {
         width: 25px;
